Added new function
