# dist/swaggerui/api/openapi.yaml
@@ -87,6 +87,23 @@ paths:
                   $ref: '#/components/schemas/Device'
         '401':
           $ref: "#/components/responses/UnauthorizedError"
+  /device:
+    put:
+      security:
+        - ApiKeyAuth: []
+      tags:
+        - Device
+      summary: Change device settings
+      parameters:
+      - in: "query"
+        name: "body"
+        description: "Device object that needs to be updated"
+        required: true
+        schema:
+          $ref: "#/components/schemas/DeviceSettings"
+      responses:
+        '200':
+          description: Successfully updated
   /device/{deviceTopic}:
     get:
       security:
@@ -111,6 +128,31 @@ paths:
           $ref: "#/components/responses/UnauthorizedError"
         '422':
           description: Required parameter missing.
+    post:
+      security:
+        - ApiKeyAuth: []
+      tags:
+        - Device
+      summary: Send command and payload to device.
+      parameters:
+        - in: path
+          name: deviceTopic
+          schema:
+            type: string
+          required: true
+        - in: query
+          name: command
+          schema:
+            type: string
+          required: true
+        - in: query
+          name: payload
+          schema:
+            type: string
+          required: false
+      responses:
+        '200':
+          description: Sent
   /sensorTypes/{deviceTopic}:
     get:
       security:
@@ -228,6 +270,15 @@ components:
       properties:
         apikey:
           type: string
+    DeviceSettings:
+      type: object
+      properties:
+        Topic:
+          type: string
+          description: Unique device topic
+        DeviceName:
+          type: string
+          description: Device friendly name
     Device:
       type: object
       properties:
@@ -237,7 +288,7 @@ components:
         FullTopic:
           type: string
           description: Full topic format
-        Name:
+        DeviceName:
           type: string
           description: Device friendly name
         Module:
@@ -253,6 +304,8 @@ components:
           type: string
           description: Timezone offset from GMT
           pattern: '(\+|\-)\d{2}:\d{2}'
+        Wifi:
+          $ref: '#/components/schemas/Wifi'
         StatusNET:
           $ref: '#/components/schemas/Network'
         StatusFWR:
@@ -322,6 +375,25 @@ components:
         DNSServer1: '10.0.0.1'
         DNSServer2: '8.8.8.8'
         Mac: '84:CC:A8:9D:CA:AE'
+    Wifi:
+      type: object
+      properties:
+        SSId:
+          type: string
+        BSSId:
+          type: string
+        Channel:
+          type: integer
+        Mode:
+          type: string
+        Signal:
+          type: integer
+      example:
+        SSId: 'MyWifiAP'
+        BSSid: '00:00:00:00:00:00'
+        Channel: 9
+        Mode: '11n'
+        Signal: -38
     Zigbee:
       type: object
       properties:
@@ -342,6 +414,9 @@ components:
         LastSeen:
           type: integer
           description: Last seen in seconds since queried
+        LastSeenEpoch:
+          type: integer
+          description: Last seen at seconds since unix epoch UTC
         Reachable:
           type: boolean
     DS18B20:
